--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
                 </div>
             </div>
             <div class="col" id="weather-col">
-                <div class="row" id="current-row"></div>
+                <div class="row" id="current-row">
+                    <div id="current-weather">
+                        <div id="description"></div>
+                        <h1 id="temp"></h1>
+                        <div id="location"></div>
+                    </div>
+                </div>
                 <div class="row" id="future-row"></div>
             </div>
         </div>
