added functionality to display data upon request

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="col-sm-auto bg-light" id="search-col">
                 <div class="row" id="search-row">
                     <div id="form-container">
-                        <h5 class="h5">Search for a City:</h5>
+                        <h1 class="h5">Search for a City:</h1>
                         <form>
                             <input id="city" type="text" placeholder="Enter City Name"></input>
                             <button id="search" type="submit" class="btn btn-primary"><span class="oi oi-magnifying-glass"></span></input>
@@ -30,13 +30,11 @@
             </div>
             <div class="col" id="weather-col">
                 <div class="row" id="current-row">
-                    <div id="current-weather">
-                        <div id="description"></div>
-                        <h1 id="temp"></h1>
-                        <div id="location"></div>
-                    </div>
+                    <div id="current-weather"></div>
                 </div>
-                <div class="row" id="future-row"></div>
+                <div class="row" id="future-row">
+                    <div id="future-weather"></div>
+                </div>
             </div>
         </div>
     </div>
