--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark justify-content-center">
-        <span class="navbar-brand mb-0 h1">Weather Dashboard</span>
+        <span class="navbar-brand mb-0 h1" id="title">Weather Dashboard</span>
     </nav>
     <div class="container">
         <div class="row" id-="main-row">
@@ -33,6 +33,7 @@
                     <div id="current-weather"></div>
                 </div>
                 <div class="row" id="future-row">
+                    <div id="future-header"></div>
                     <div id="future-weather"></div>
                 </div>
             </div>
