finalized project and made final changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <h1 class="h5">Search for a City:</h1>
                         <form>
                             <input id="city" type="text" placeholder="Enter City Name"></input>
-                            <button id="search" type="submit" class="btn btn-primary"><span class="oi oi-magnifying-glass"></span></input>
+                            <button id="search" type="submit" class="btn btn-primary"><span class="oi oi-magnifying-glass"></span></button>
                         </form>
                     </div>
                 </div>
